--- a/segundaPaginaWeb/index.html
+++ b/segundaPaginaWeb/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         
         <title>Nombre empresa</title>
+        <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
 
         <link href="./assets/css/normalize.css" rel="stylesheet" />
         <link href="./assets/css/reset.css" rel="stylesheet" />
